Ajuste en URL... se envia el path :D

--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -250,7 +250,7 @@
     if( site_url == "http://192.168.253.31"){
       tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
     }
-    urlApiBase = site_url+'api/'
+    urlApiBase = site_url+'/api/'
   }
 
   //##############################
