--- a/client/templates/client/user_selected_sensor.html
+++ b/client/templates/client/user_selected_sensor.html
@@ -263,27 +263,27 @@
     var userIP;
 
     var site_url = "{{ site_url }}";
-    var ws_url = site_url.replace("http","ws");
+    var ws_url = 'ws://' + site_url;
 
     console.log(site_url);
     console.log(ws_url);
     //ws_url = ws_url.replace("","");
 
-    if(site_url == 'http://sensait.dyndns.org/'){
+    if(site_url == 'sensait.dyndns.org'){
       tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
     }else{
       tokenCode   = 'Token 6b4f2e70ae0d435bf512897355947fe0a564972a';
       //Para cuando se accede desde la RED local el server
-      if( site_url == "http://192.168.253.31"){
+      if( site_url == "192.168.253.31"){
         tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
       }
-      urlApi = 'http://' + site_url+'/api/arduinos/{{ arduinosensor.arduino.id }}/sensors/{{ arduinosensor.id }}/data/'
+      urlApi = 'http://' + site_url + '/api/arduinos/{{ arduinosensor.arduino.id }}/sensors/{{ arduinosensor.id }}/data/'
     }
     //##############################
 
   var canUseSocket = false;
   var ws4redis = WS4Redis({
-    uri: 'http://' + ws_url+'/ws/{{arduinosensor.arduino.arduino_token}}?subscribe-broadcast&publish-broadcast&echo',
+    uri: ws_url+'/ws/{{arduinosensor.arduino.arduino_token}}?subscribe-broadcast&publish-broadcast&echo',
     //'ws://sensait.dyndns.org/ws/{{arduinosensor.arduino.arduino_token}}?subscribe-broadcast&publish-broadcast&echo',
     //':'+userPort+
     connecting: on_connecting,
