--- a/client/templates/client/user_dashboard.html
+++ b/client/templates/client/user_dashboard.html
@@ -240,12 +240,12 @@
   var urlApiBase;
   var tokenCode ;
 
-  if(site_url == 'http://sensait.dyndns.org/'){
+  if(site_url == 'sensait.dyndns.org'){
     tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
   }else{
     tokenCode   = 'Token 6b4f2e70ae0d435bf512897355947fe0a564972a';
     //Para cuando se accede desde la RED local el server
-    if( site_url == "http://192.168.253.31"){
+    if( site_url == "192.168.253.31"){
       tokenCode = 'Token d7e7f378cdc67dcd7cec11b76e017927c3e73bc3';
     }
   }
